crates/tui/tests/snapshots/tui_test__render_app_after_j_pressed_three_times.snap
---
source: crates/tui/tests/tui_test.rs
expression: terminal.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│jjj                                                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
